<resources>
    <string name="mapbox_access_token">pk.eyJ1IjoiZmVsaXh0aGVjYXQ2MyIsImEiOiJjanJ0MW5sYWoyZ2VtNDNwbHp5aXN2ZXh2In0.LQr-tOgZu1TMv36-A7X3oQ</string>
    <string name="lang">Select language</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="italian">Italian</string>

    <string name="app_name">Zaandam</string>
    <string name="title_activity_display_map">DisplayMapActivity</string>

    <string name="display_map_confirm_location">Confirm location</string>

    <string name="launcher_getCurrentLocation">Tell me your location:</string>
    <string name="launcher_searchPlaceholder">...or type your destination</string>

    <string name="geocoding_button_center_map">Center map</string>
    <string name="geocoding_button_get_by_coordinates">Get by lat/long</string>
    <string name="geocoding_button_advanced">Advanced</string>
    <string name="geocoding_button_get_by_name">Get by name</string>
    <string name="geocoding_hint_latitude">Latitude</string>
    <string name="geocoding_hint_longitude">Longitude</string>
    <string name="geocoding_hint_type_destination">Type your destination</string>

    <string name="select_a_poi_category">Select a POI category</string>
    <string name="select_poi_range">Choose a km range</string>
    <string name="search">Search</string>

    <string name="five_km">5</string>
    <string name="ten_km">10</string>
    <string name="twenty_km">20</string>
    <string name="fifty_km">50</string>

    <string name="airports">Airports</string>
    <string name="atms">ATMs</string>
    <string name="attractions">Attractions</string>
    <string name="bakeries">Bakeries</string>
    <string name="campsites">Campsites</string>
    <string name="food_stores">Food stores</string>
    <string name="free_wifi">Free WiFi</string>
    <string name="hotels">Hotels</string>
    <string name="lakes">Lakes</string>
    <string name="mc_donalds">Mc Donalds</string>
    <string name="monuments">Monuments</string>
    <string name="parking">Parking</string>
    <string name="petrol_station">Petrol stations</string>
    <string name="picnic">Picnic area</string>
    <string name="railway_station">Railway stations</string>
    <string name="religious_buildings">Religious buildings</string>
    <string name="restaurants">Restaurants</string>
    <string name="seaside">Seaside</string>
    <string name="theatre">Theatre</string>
    <string name="tram_stations">Tram stations</string>
    <string name="service_area">Service areas</string>
    <string name="your_destination">Your destination</string>
    <string name="selectAPOI">Choose a point of interest</string>

    <string name="show_on_map">Show on a map</string>

    <string name="access_token" translatable="false">@string/mapbox_access_token</string>
    <string name="no_internet_message">Route drawing not possible because there\'s no internet connection!</string>
    <string name="failure_to_retrieve">Failure to retrieve the navigation route!</string>

    <!-- Single card -->
    <string name="coordinates">Coordinates</string>
    <string name="category">Category</string>
    <string name="distance">km</string>
    <string name="directions_activity_marker_options_origin_title">Origin</string>
    <string name="directions_activity_marker_options_origin_snippet">Alhambra</string>
    <string name="directions_activity_marker_options_destination_title">Destination</string>
    <string name="directions_activity_marker_options_destination_snippet">Plaza del Triunfo</string>
    <string name="directions_activity_toast_message">Route is %1$f meters long.</string>
    <string name="directions_distance">distance: %1$f km</string>
    <string name="directions_heure">duration:%1$f s</string>
    <string name="select_itinerary">Select your profile</string>
	<string name="itenary">ITINERARY</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="toast_internet">No internet connection detected, please log in</string>

</resources>
