<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ChoosePOICategory">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="8dp"
        android:text="@string/select_a_poi_category"
        app:layout_constraintBottom_toTopOf="@+id/scrollview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="403dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

            <RadioGroup
                android:id="@+id/radioGroupCategory"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/airports"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/airports"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/atms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/atms"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/attractions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/attractions"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/bakeries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bakeries"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/campsites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/campsites"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/food_stores"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food_stores"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/free_wifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/free_wifi"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/hotels"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hotels"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/lakes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lakes"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/mc_donalds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mc_donalds"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/monuments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monuments"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/parking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parking"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/petrol_station"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/petrol_station"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/picnic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/picnic"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/railway_station"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/railway_station"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/religious_buildings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/religious_buildings"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/restaurants"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restaurants"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/seaside"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seaside"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/serviceArea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/service_area"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/theatre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/theatre"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/tram_stations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tram_stations"
                    android:textSize="18sp" />

            </RadioGroup>

    </ScrollView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="8dp"
        android:padding="10dp"
        android:text="@string/select_poi_range"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/confirmPOICriteria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioGroup
            android:id="@+id/radioGroupRange"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            app:layout_constraintTop_toTopOf="@id/linearLayout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/linearLayout4">

            <RadioButton
                android:id="@+id/five_km"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five_km"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/ten_km"
                app:layout_constraintEnd_toStartOf="@+id/ten_km"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent" />

            <RadioButton
                android:id="@+id/ten_km"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ten_km"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/twenty_km"
                app:layout_constraintStart_toEndOf="@+id/five_km"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/twenty_km"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twenty_km"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/ten_km"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ten_km" />

            <RadioButton
                android:id="@+id/fifty_km"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fifty_km"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/fifty_km"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/twenty_km" />

        </RadioGroup>

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/confirmPOICriteria"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:onClick="onConfirmPOICriteria"
        android:text="@string/search"
        android:theme="@style/AppTheme.ButtonFuchsia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>